# ai_caller

./: README.md  pyproject.toml  requirements.txt  run.py
aicaller/: conversion.py  loader.py  template.py
aicaller/api/: api.py  api_async.py  base.py  factory.py  utils.py
data/softcite/: send_to_api_sync.sh
examples/image_captioning/: README.md  api.yaml  config_ollama.yaml  config_openai.yaml
examples/image_captioning/data/: metadata.jsonl
examples/paraphrasing/: README.md  config_chat.yaml  config_simple.yaml
openaiapicaller/: __main__.py  api.py  conversion.py  few_shot_sampler.py  sample_assembler.py  template.py  utils.py
openaiapicaller/configs/: api.yaml  create_batch_file.yaml
tests/: test_few_shot.py  test_loader.py  test_sample_assembler.py  test_template.py
tests/fixtures/: dataset.csv  dataset.jsonl
tests/fixtures/dataset/: README.md
tests/fixtures/dataset/long/: test.jsonl  train.jsonl
tests/fixtures/dataset/short/: test.jsonl  train.jsonl
